Bug 162072 - Font fallback: not taking roman vs swiff (sans vs serif) hints into account
Summary: Font fallback: not taking roman vs swiff (sans vs serif) hints into account
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.2.0 target:24.8.0.2 target:...
Keywords:
Depends on:
Blocks: Font-Fallback
  Show dependency treegraph
 
Reported: 2024-07-17 13:47 UTC by Miklos Vajna
Modified: 2025-01-28 22:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (11.56 KB, application/vnd.oasis.opendocument.text)
2024-07-17 13:47 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-07-17 13:47:42 UTC
Created attachment 195355 [details]
Minimal reproducer

Steps to reproduce the bug:

1) Open the attached ODT bugdoc

2) Look at the picked fonts in the 2 paragraphs in the document as part of font fallback

Expected result: first para is sans, second para is serif.

Actual result: both paragraphs are sans.
Comment 1 Commit Notification 2024-07-18 15:45:52 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6dfac38bacd449c64a13363797b56aff49cf8f52

tdf#162072 vcl, fontconfig: consider font-family-generic for substitute

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-07-19 20:38:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d06de2e049761b7b9e8a95f17557d309812f7acc

Related: tdf#162072 DOCX import: handle font family for characters

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-07-22 17:58:11 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/e621b6fefef307048c035298649e7cc5159945ae

tdf#162072 vcl, fontconfig: consider font-family-generic for substitute

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-07-23 12:25:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/91dc75b03defdc2faefde1822588dcc96ab9b145

Related: tdf#162072 DOCX import: handle font family for characters

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-07-28 20:00:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d01dcab81a6a66fd5b4448ccff348f69c82c538d

Related: tdf#162072 compare fallback to what "serif" resolves to

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Heiko Tietze 2024-08-01 14:31:33 UTC
Is it a solution for bug 161378 or bug 161373?
Comment 7 Miklos Vajna 2024-08-02 06:50:56 UTC
I believe bug 161373 is a duplicate, I just asked there. The other one is about UI and I didn't touch UI here, so probably not. Thanks, I'm really bad at searching for duplicates.
Comment 8 Commit Notification 2025-01-07 14:22:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/bc88302e1bdb9cfc103e72f93f4aaa98512ea141

Related: tdf#162072 compare fallback to what "serif" resolves to

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.